.golden/-559153311506421916/golden

INITIALPATH:7:11: error:
    • INITIALPATH:7:22:
  |
7 | main = [f|{hello:=100s}|]
  |                      ^
String type is incompatible with inside padding (=).

    • In the quasi-quotation: [f|{hello:=100s}|]
  |
7 | main = [f|{hello:=100s}|]
  |           ^^^^^^^^^^^^^^^
